Fix navigation bar overlapping registration form

--- a/src/app/components/registration/registration.component.css
+++ b/src/app/components/registration/registration.component.css
@@ -1,6 +1,6 @@
 .login-block{
     position: absolute;
-    top: 50%;
+    top: 70%;
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%) 
